--- a/main/res/layout/activity_welcome_screen.xml
+++ b/main/res/layout/activity_welcome_screen.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C264FF" >
+    android:background="#C264FF">
 
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path
-        name="external_files"
-        path="." />
-</paths>
+    <ImageView
+        android:id="@+id/splash_logo"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/prometheuslogo"
+        android:layout_centerInParent="true"
+        android:contentDescription="@string/logo" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
